# c-leetcode-solutions

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  problemset.md
.vscode_linux/: tasks.json
.vscode_macos/: launch.json  settings.json  tasks.json
array/: 3sum-closest.c  3sum.c  4sum.c  CMakeLists.txt  best-time-to-buy-and-sell-stock-ii.c  best-time-to-buy-and-sell-stock-iii.c  best-time-to-buy-and-sell-stock.c  best-time-to-buy-and-sell-stock[2].c  combination-sum-ii.c  combination-sum-iii.c  combination-sum.c  construct-binary-tree-from-inorder-and-postorder-traversal.c  construct-binary-tree-from-preorder-and-inorder-traversal.c  container-with-most-water.c  contains-duplicate-ii.c  contains-duplicate.c  find-minimum-in-rotated-sorted-array-ii.c  find-minimum-in-rotated-sorted-array.c  find-minimum-in-rotated-sorted-array1.c  find-peak-element.c  find-peak-element1.c  first-missing-positive.c  insert-interval.c  jump-game-ii.c  jump-game.c  largest-rectangle-in-histogram.c  majority-element-ii.c  majority-element.c  maximal-rectangle.c  maximum-product-subarray.c  maximum-subarray.c  median-of-two-sorted-arrays.c  median-of-two-sorted-arrays1.c  merge-sorted-array.c  minimum-path-sum.c  minimum-size-subarray-sum.c  minimum-size-subarray-sum[1].c  pascals-triangle-ii.c  pascals-triangle.c  plus-one.c  (+31 more)
backtracking/: CMakeLists.txt  regular-expression-matching.c  regular-expression-matching2.c
binary-search/: CMakeLists.txt  CmakeLists.txt  count-complete-tree-nodes.c  divide-two-integers.c  dungeon-game.c  find-minimum-in-rotated-sorted-array-ii.c  find-minimum-in-rotated-sorted-array.c  find-peak-element1.c  find-the-duplicate-number.c  first-bad-version.c  kth-smallest-element-in-a-bst1.c  longest-increasing-subsequence.c  median-of-two-sorted-arrays.c  minimum-size-subarray-sum.c  powx-n.c  search-a-2d-matrix-ii.c  search-a-2d-matrix2.c  search-for-a-range.c  search-in-rotated-sorted-array-ii.c  search-in-rotated-sorted-array.c  search-insert-position.c  sqrtx.c
design/: CMakeLists.txt  number-of-recent-calls.c
divide-and-conquer/: CMakeLists.txt  kth-largest-element-in-an-array.c  majority-element.c  maximum-subarray.c  median-of-two-sorted-arrays.c  merge-k-sorted-lists.c  search-a-2d-matrix-ii.c
docs/: advanced.md  medium.md  primary.md
dynamic-programming/: CMakeLists.txt  Mem-Limit-Exceeded_wildcard-matching.c  best-time-to-buy-and-sell-stock-iii.c  best-time-to-buy-and-sell-stock-iv.c  best-time-to-buy-and-sell-stock-iv2.c  best-time-to-buy-and-sell-stock-with-cooldown.c  best-time-to-buy-and-sell-stock.c  best-time-to-buy-and-sell-stock2.c  burst-balloons.c  climbing-stairs2.c  coin-change.c  counting-bits2.c  decode-ways.c  distinct-subsequences.c  dungeon-game.c  edit-distance.c  house-robber-ii.c  house-robber-ii2.c  house-robber.c  house-robber2.c  interleaving-string.c  longest-increasing-subsequence.c  longest-increasing-subsequence2.c  (+20 more)
hash-table/: 4sum-ii.c  4sum.c  CMakeLists.txt  binary-tree-inorder-traversal.c  binary-tree-inorder-traversal1.c  bulls-and-cows.c  contains-duplicate-ii.c  contains-duplicate.c  copy-list-with-random-pointer.c  count-primes.c  find-all-anagrams-in-a-string.c  find-the-difference.c  happy-number.c  happy-number1.c  island-perimeter.c  isomorphic-strings.c  isomorphic-strings1.c  keyboard-row.c  longest-palindrome.c  longest-substring-without-repeating-characters.c  maximal-rectangle.c  minimum-window-substring.c  number-of-boomerangs.c  single-number.c  two-sum.c  valid-anagram.c  word-pattern.c
(+172 files in other folders)
